Adjust z-index to prevent overlapping elements on animation

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+.td-item {
+    z-index: 1;
+}
+
 .td-item:hover {
     cursor: pointer;
 }
@@ -62,6 +66,7 @@
     position: absolute;
     display: none;
     width: 100%;
+    z-index: 100;
 }
 
 /* USE THIS TO CREATE TRIANGLE ON TOP OF ELEMENT */
